src/main/java/org/example/mobble/_util/error/ex/Exception403.java
package org.example.mobble._util.error.ex;

public class Exception403 extends RuntimeException {
    public Exception403(String message) {
        super(message);
    }
}
